--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,5 @@ cmake_minimum_required(VERSION 3.17)
 project(sets C)
 
 set(CMAKE_C_STANDARD 99)
-
+add_executable(sets main.c)
 add_library(sets sets.c sets.h)
